--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -18,17 +18,14 @@
     min-width: 10vw;
 }
 
-.sidebar__headerRight__icons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    left: 220px;
-}
-
 .sidebar__headerRight>.MuiSvgIcon-root {
     margin-right: 2vw;
     font-size: 24px !important;
+    padding: 25px;
+}
+
+.sidebar__headerRight_Icons {
+    padding-left: 16vw;
 }
 
 .sidebar__search {
