--- a/frontend/src/styles/SidebarChat.css
+++ b/frontend/src/styles/SidebarChat.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none !important;
+    color: black;
+}
+
 .sidebarChat {
     display: flex;
     padding: 20px;
@@ -14,6 +19,7 @@
 }
 
 .sidebarChat__info>h4 {
+    margin-top: 10px;
     font-size: 16px;
     margin-bottom: 8px;
 }
